# karpathy-lecture

./: .gitignore  README.md  pyproject.toml
build-gpt-from-scratch/: README.md  bigram.py  gpt-dev.ipynb
