[project]
name = "karpathy-lecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # uv add numpy==1.26.4
    "numpy==1.26.4",
    "tiktoken>=0.12.0",
    # uv add torch==2.2.2 torchvision==0.17.2 torchaudio==2.2.2
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
]
